# parcelless

./: .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml
parcelless/app/schemas/shipments/: address.py  package.py  shipment_details.py
parcelless/infra/: config.py
parcelless/infra/utils/: request.py  tasks.py
